[package]
name = "grep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halfbrown = "0.2.4"
libc = "0.2.153"
serde = "1.0.195"
serde_derive = "1.0.195"
tokio = { version = "1.35.1", features = ["full"] }

